perubahan pada contact me

--- a/html/home.html
+++ b/html/home.html
@@ -226,7 +226,7 @@
             <div class="card-panel green darken-1 center white-text "  data-aos="flip-up"     data-aos-duration="1500">
               <i class=" Medium material-icons ">email</i>
               <h5>Contact me</h5>
-              <p>apabila anda berminat untuk berkontribusi dan mendevelope project ini hubungi contact ini </p>
+              <p>apabila anda berminat untuk berkontribusi dan mendevelope project ini isilah from ini terlebih dahulu </p>
             </div>
 
             <ul class="collection with-header ">
