memperbaiki buton kirim

--- a/html/home.html
+++ b/html/home.html
@@ -265,7 +265,7 @@
               <div class="input-field">
                 <textarea name="pesan" id="massage" class="materialize-textarea"></textarea>
                 <label for="massage">Pesan</label>
-                <button type="submit" class="btn green darken-1">kirim</button>
+                <button type="submit" class="btn green darken-1 dnone">kirim</button>
               </div>
               <div id="gost" class="progress">
                 <div class="indeterminate "></div>
